# zcf-jn5189-ed-switches

./: .clang-format  .gitignore  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
firmwares/: CMakeLists.txt
firmwares/DEVBOARD/: app.zpscfg  device_config.c  device_definitions.h  device_zcl_options.h  z2m_converter.js
firmwares/WXKG14LM/: README.md  app.zpscfg  device_config.c  device_definitions.h  device_zcl_options.h  z2m_converter.js
firmwares/WXKG15LM/: README.md  device_config.c  device_definitions.h  device_zcl_options.h  z2m_converter.js
firmwares/common/: ConfigurationCluster.c  ConfigurationCluster.h  app_basic_ep.c  app_basic_ep.h  app_battery.c  app_battery.h  app_buttons.c  app_buttons.h  app_common.c  app_common.h  app_leds.c  app_leds.h  app_main.c  app_main.h  app_on_off_ep.c  app_on_off_ep.h  app_polling.c  app_polling.h  app_reporting.c  app_reporting.h  app_wwdt.c  app_wwdt.h  app_zb_node.c  app_zb_node.h  app_zcl_tick.c  app_zcl_tick.h  bdb_options.h  board.h  buttons_leds_manifest.c  buttons_manifest.c  device_config.h  hardware_init.c  sys_irq_handler.c  zcl_options.h
firmwares/common/include/: app_battery.h  app_buttons.h  app_leds.h  app_resources.h  device_config.h
firmwares/common/src/: app_battery.c  app_buttons.c  app_leds.c  app_main.c  app_resources.c  hardware_init.c
sdk/middleware/wireless/framework/Common/devices/DK6/gcc/: connectivity_sota.ld
sdk/middleware/wireless/framework/FunctionLib/: FunctionLib.h
sdk/middleware/wireless/framework/OtaSupport/Interface/: OtaSupport.h
sdk/middleware/wireless/framework/OtaSupport/Source/: OtaSupport.c
sdk/middleware/wireless/ieee-802.15.4/mMac/Include/: MiniMac.h
sdk/middleware/wireless/zigbee/ZCIF/Source/: zcl.c
sdk/middleware/wireless/zigbee/examples/zigbee_coordinator/build_linux/: README.md
sdk/middleware/wireless/zigbee/examples/zigbee_router/src/: app_zcl_task.c
sdk/middleware/wireless/zigbee/platform/K32W0/platform/: crypto.c
tools/programmer/: flash.py
tools/programmer/isp/: entities.py  enums.py  interface.py
tools/programmer/isp/messages/: requests.py  responses.py
utils/programmer/: requirements.txt
utils/programmer/isp/: crc.py  entities.py  enums.py  interface.py
utils/programmer/isp/messages/: base.py  responses.py
